# mlhq

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
scripts/: looking-at-tokens.py  terminal-chat.py  test-client.py
scripts/configs/: hflocal_Qwen2.5_7B_Instruct__basic.json  hflocal_Qwen3_8B__basic.json
src/mlhq/: __init__.py  __main__.py  client.py  core.py  logging_config.py  types.py
src/mlhq/backends/: base.py  hf_backend.py  openai_backend.py  openai_backend.py.bck
tests/: test_client_init.py  test_core.py
