[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlhq"
version = "0.0.1"
description = "Minimal skeleton for the MLHQ Python library."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "MLHQ", email = "max@mlhq.com" }
]
keywords = ["mlhq", "ml", "tooling"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

# Runtime dependencies (keep minimal; add as needed)
dependencies = ["openai>=1.50.0"]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "ruff>=0.5.0",
  "black>=24.3.0",
  "build>=1.2.1",
]

[project.scripts]
# Example console script (optional). If you want a `mlhq` command:
# mlhq = "mlhq.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

# ---- Tooling config (ruff/black/pytest) ----
[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E","F","I","UP"]    # basic errors, formatting, imports, py-upgrades
ignore = []

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

