[metadata]
name = mlhq
version = 0.0.1
description = Minimal skeleton for the MLHQ Python library.
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE

[options]
python_requires = >=3.9
package_dir =
    = src
packages = find:
install_requires =
    # Runtime deps go here (keep minimal)
    # e.g. numpy>=1.26

[options.packages.find]
where = src

[options.extras_require]
# Mirrors [project.optional-dependencies].dev from pyproject.toml
dev =
    pytest>=7.0
    pytest-cov>=4.0
    ruff>=0.5.0
    black>=24.3.0
    build>=1.2.1

